# relayr

./: .gitignore  build-local-prod.sh  directori.txt  directory.txt  docker-compose.dev.yaml  docker-compose.prod-backend.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker.sh  generate-dir-context.ts
relayr-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.dev  README.md  build-docker-multi-arch.sh  build_container.sh  build_image.sh  docker-compose.yaml
relayr-api/src/: config.rs  lib.rs  main.rs  routes.rs
relayr-api/src/common/response/: error.rs  mod.rs  success.rs
relayr-api/src/feature/relay/: error.rs  handlers.rs  macros.rs  mod.rs  routes.rs  state.rs
relayr-api/src/feature/relay/ws/: mod.rs  peer_disconnect.rs  read.rs  read_handlers.rs  socket.rs  task_manager.rs  write.rs
relayr-api/src/feature/relay/ws/dto/: request.rs  response.rs
relayr-api/src/features/relay/: handlers.rs  mod.rs  state.rs  types.rs
relayr-api/src/features/relay/dto/: requests.rs  responses.rs
relayr-api/src/features/relay/ws/: mod.rs  peer_disconnect.rs  ping.rs  read.rs  read_handlers.rs  socket.rs  task_manager.rs
relayr-api/src/relay/: error.rs  handlers.rs  macros.rs  mod.rs  others.rs  routes.rs  state.rs
relayr-api/src/relay/dto/: requests.rs  responses.rs
relayr-api/src/relay/ws/: handlers.rs  heartbeat.rs  mod.rs  ping.rs  receiver.rs  sender.rs  utils.rs
relayr-ui/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  README.md  build-docker-multi-arch.sh  env.d.ts  (+8 more)
(+178 files in other folders)
