[package]
name = "relayr-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
dotenv = "0.15.0"
futures = "0.3.31"
nanoid = "0.4.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

console-subscriber = { version = "0.4.1", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[features]
console = ["dep:console-subscriber"]
